# atlas

./: .clean-publish  .dockerignore  .env.dev.baas.example  .env.example  .env.prod.appwrite.example  .gitignore  .gitleaks.toml  .jscpd.json  .mcp.json  .npmrc  .prettierignore  .trivyignore  AUDIT.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  DRIFT_FIXES.md  GOVERNANCE.md  IMPROVEMENTS.md  README.md  ROADMAP.md  SECURITY.md  TODO.md  commitlint.config.js  docker-compose.yml  eslint.config.js  knip.config.ts  knip.json  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  tsconfig.base.json  tsconfig.json  turbo.json  typedoc.json  (+1 more)
dataops/citation-dagster/: .dockerignore  Dockerfile  README.md  code-location.manifest.yaml  package.json  pyproject.toml
dataops/citation-dagster/deploy/: RUNBOOK.md  application.example.yaml  build-code.sh  build-deps-base.sh  code-location.yaml  deps-base.ref  install.sh  kustomization.yaml  objectbucketclaim.prod.yaml  validate.sh  workspace-patch.yaml
dataops/citation-dagster/deploy/base/: code-location.yaml  kustomization.yaml  migration-job.yaml  pdb.yaml  workspace-fragment.yaml  workspace-patch.yaml
dataops/citation-dagster/deploy/base/migrations/: README.md
dataops/citation-dagster/deploy/migrations/: 0001_researchers_index.sql  README.md
dataops/citation-dagster/deploy/overlays/bench/: kustomization.yaml  patch-s3-envfrom.yaml  s3-access.yaml
dataops/citation-dagster/deploy/overlays/prod/: kustomization.yaml  objectbucketclaim.yaml  patch-s3-envfrom.yaml
dataops/citation-dagster/scripts/: check_code_freshness.py  check_deps_base_freshness.py  fetch_model.py
dataops/citation-dagster/src/citation_dagster/: __init__.py  dbt.py  definitions.py  ge_suites.py  lakehouse.py  last_run.py  lineage.py  manifest_read.py  model_provenance.py  resources.py  tracking.py  uplift_model.py  watermark.py
dataops/citation-dagster/src/citation_dagster/assets/: __init__.py  batch_eunicoast.py  drift.py  drift_uplift.py  index_load.py  manifest.py  quality.py  raw_snapshot.py  researcher_embeddings.py  uplift.py
dataops/citation-dagster/tests/: conftest.py  drift_draft.py  test_batch_eunicoast.py  test_check_code_freshness.py  test_check_deps_base_freshness.py  test_collab_manifest.py  test_dbt.py  test_dbt_models.py  test_definitions.py  test_drift.py  test_drift_uplift.py  test_ge_suites.py  test_index_load.py  test_lakehouse.py  test_last_run.py  test_lineage.py  test_minio_fixture.py  test_quality.py  test_raw_snapshot.py  test_researcher_embeddings.py  test_resources.py  test_tracking.py  test_uplift_asset.py  test_uplift_labels.py  test_uplift_model.py  test_uplift_model_property.py  test_watermark.py
dataops/mediawatch-dagster/: Dockerfile  README.md  code-location.manifest.yaml  package.json  pyproject.toml
dataops/mediawatch-dagster/deploy/: application.example.yaml  build-code.sh  build-deps-base.sh  deps-base.ref  validate.sh
dataops/mediawatch-dagster/deploy/base/: code-location.yaml  kustomization.yaml  pdb.yaml  workspace-fragment.yaml  workspace-patch.yaml
dataops/mediawatch-dagster/scripts/: check_code_freshness.py  check_deps_base_freshness.py
dataops/mediawatch-dagster/src/mediawatch_dagster/: __init__.py  dbt.py  definitions.py  forecast_model.py  ge_suites.py  gkg.py  http_fetch.py  lakehouse.py  last_run.py  lineage.py  partitions.py  resources.py  ror.py  tracking.py  watermark.py
dataops/mediawatch-dagster/tests/: test_dbt.py  test_definitions.py  test_drift_forecast.py  test_forecast_asset.py  test_forecast_model.py  test_forecast_model_property.py  test_gkg.py  test_gkg_property.py  test_http_fetch.py  test_lakehouse.py  test_last_run.py  test_lineage.py  test_manifest.py  test_partitions.py  test_quality.py  test_raw_gkg.py  test_raw_native_gkg.py  test_ref_universities_snapshot.py  test_resources.py  test_ror.py  test_ror_property.py  test_tracking.py  test_watermark.py
dataops/pageviews-dagster/: .dockerignore  Dockerfile  README.md  code-location.manifest.yaml  package.json  pyproject.toml
dataops/pageviews-dagster/deploy/: RUNBOOK.md  application.example.yaml  build-code.sh  build-deps-base.sh  deps-base.ref  validate.sh
dataops/pageviews-dagster/deploy/base/: code-location.yaml  kustomization.yaml  pdb.yaml  workspace-fragment.yaml
dataops/pageviews-dagster/scripts/: check_code_freshness.py  check_deps_base_freshness.py
dataops/pageviews-dagster/src/pageviews_dagster/: __init__.py  dbt.py  definitions.py  forecast_model.py  ge_suites.py  lakehouse.py  last_run.py  lineage.py  resources.py  tracking.py
dataops/pageviews-dagster/tests/: conftest.py  test_dbt.py  test_definitions.py  test_deps_base_ref.py  test_drift_forecast.py  test_forecast_asset.py  test_forecast_model.py  test_forecast_model_property.py  test_ge_suites.py  test_lakehouse.py  test_last_run.py  test_lineage.py  test_manifest.py  test_quality_asset.py  test_raw_pageviews.py  test_ref_universities.py  test_resources.py  test_tracking.py
dataops/scholar-network-dagster/: Dockerfile  README.md  code-location.manifest.yaml  package.json  pyproject.toml
dataops/scholar-network-dagster/deploy/: application.example.yaml  build-code.sh  build-deps-base.sh  deps-base.ref  install.sh  validate.sh
dataops/scholar-network-dagster/deploy/base/: code-location.yaml  kustomization.yaml  migration-job.yaml  pdb.yaml  workspace-fragment.yaml
dataops/scholar-network-dagster/scripts/: check_code_freshness.py  check_deps_base_freshness.py  fetch_model.py
dataops/scholar-network-dagster/src/scholar_network_dagster/: __init__.py  cache.py  definitions.py  embedding.py  lakehouse.py  lineage.py  ref_eunicoast.py  resources.py
dataops/scholar-network-dagster/tests/: conftest.py  test_cache.py  test_definitions.py  test_index_load.py  test_lakehouse.py  test_lineage.py  test_model_provenance.py  test_passes.py  test_passes_integration.py  test_prefilter.py  test_prefilter_integration.py  test_profiles.py  test_quality.py  test_resources.py
(+1921 files in other folders)
