[project]
name = "citation-dagster"
version = "0.0.0"
description = "Code-location Dagster du pipeline de citations (assets DataOps, ADR 0055)"
requires-python = ">=3.10,<3.11"
# Parité avec l'image Dagster du cluster (python:3.10-slim, dagster==1.13.7,
# ADR cluster 0006 : verrou chart Helm <-> paquet Python 1:1).
# NB : rclone n'est PAS une dépendance pip — c'est un binaire installé dans
# l'image (voir Dockerfile), invoqué en sous-processus par l'asset de sync.
dependencies = [
  "dagster==1.13.7",
  # Le run worker (K8sRunLauncher) EST cette image : à chaque run, le launcher
  # crée un pod depuis DAGSTER_CURRENT_IMAGE (= cette image) qui REHYDRATE
  # l'instance Dagster du cluster (dagster.yaml). Or le socle configure
  # PostgresRunStorage/ScheduleStorage + K8sRunLauncher (contrat ADR 0043) : le
  # pod doit donc pouvoir importer dagster_postgres ET dagster_k8s, sinon il
  # échoue au démarrage (« Couldn't import module dagster_postgres.run_storage »)
  # avant même d'exécuter l'asset. Numérotation propre 0.YY.Z (comme dagster-dbt,
  # PAS celle de dagster core) : 0.29.7 ↔ dagster 1.13.7 (parité chart Helm ↔
  # paquet Python, ADR cluster 0006).
  "dagster-postgres==0.29.7",
  "dagster-k8s==0.29.7",
  "openlineage-python",
  # Pipeline de transformation (étape 3) : DuckDB lit le brut JSONL.gz et écrit
  # le Parquet sur S3 (httpfs path-style) ; dbt-duckdb porte les modèles ;
  # dagster-dbt expose les modèles comme assets. dagster-dbt suit une
  # numérotation propre 0.YY.Z (PAS celle de dagster) : 0.29.7 ↔ dagster 1.13.7.
  "duckdb",
  "dbt-duckdb",
  "dagster-dbt==0.29.7",
  # Qualité des données (étape 3.5a) : suites Great Expectations exécutées en
  # asset checks Dagster BLOQUANTS (en complément des tests dbt). Validation
  # in-process sur DataFrame pandas (contexte éphémère, hermétique). GE 1.18 tire
  # numpy/scipy/pandas/cryptography (image plus lourde, ~200 Mo) — toutes licences
  # permissives ; épinglé (la résolution multi-arch vérifiée en dépend).
  "great-expectations==1.18.1",
  # Embedding sémantique par publication (étape 4, lot 3) : le vecteur(384) est
  # calculé en Python natif sur le MÊME model_quantized.onnx (all-MiniLM-L6-v2,
  # vendoré sous src/.../models/) que le code TS — sans torch, modèle cuit
  # hors-ligne (ADR 0055/0059). onnxruntime (MIT) exécute l'inférence,
  # tokenizers (Apache-2.0) reproduit le tokenizer WordPiece ; déterminisme à
  # 1 thread. numpy (déjà tiré par GE) est explicité car importé directement.
  "onnxruntime==1.23.2",
  "tokenizers==0.23.1",
  "numpy",
  # Détection de DÉRIVE (drift) des embeddings (étape MLOps, maturité 1→2) : asset
  # check Dagster NON bloquant à côté des suites Great Expectations. Evidently
  # (Apache-2.0) compare la distribution des vecteurs(384) du run courant à celle du
  # run précédent (N vs N-1) et calcule un score de drift par colonne. Tire
  # pandas/numpy/scipy (déjà présents via GE). Épinglé (résolution multi-arch).
  "evidently==0.4.40",
  # Suivi de modèles : logge params/métriques (dont le drift) et enregistre les
  # vecteurs comme artefacts dans le serveur MLflow du socle (MLFLOW_TRACKING_URI,
  # contrat cluster ADR 0043). mlflow (Apache-2.0) ; client seul, pas de serveur ici.
  "mlflow-skinny==2.22.5",
  # Modèle d'UPLIFT FWCI (ADR 0067, lot 4) : gradient boosting non linéaire (le R²=0,50
  # du spike vient de la non-linéarité, vs 0,12 en linéaire). scikit-learn (BSD-3) tire
  # numpy/scipy (déjà présents via GE) — surcoût d'image limité. Déterminisme par graine
  # figée (ADR 0057). Épinglé en 1.6.x : dernière série compatible Python 3.10 (1.7+
  # exige 3.11 ; le code-location est figé en 3.10, parité Dagster cluster ADR 0006).
  "scikit-learn==1.6.1",
]
# NB : dagster-postgres tire psycopg2-binary (LGPL) en transitive. Cette image
# l'embarque NÉCESSAIREMENT pour rehydrater l'instance dans le run worker (voir
# plus haut) ; on l'assume dans dataops/ (Python, hors gate licences Node — ADR
# 0055). Le code applicatif, lui, n'utilise jamais psycopg2 directement : l'index
# (index_load) passe par DuckDB `ATTACH ... TYPE postgres`, pas par psycopg2.

[dependency-groups]
dev = ["ruff==0.15.18", "pytest", "pytest-cov"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/citation_dagster"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=citation_dagster --cov-report=term-missing --cov-fail-under=90"
