[project]
name = "citation-dagster"
version = "0.0.0"
description = "Code-location Dagster du pipeline de citations (assets DataOps, ADR 0055)"
requires-python = ">=3.10,<3.11"
# Parité avec l'image Dagster du cluster (python:3.10-slim, dagster==1.13.7,
# ADR cluster 0006 : verrou chart Helm <-> paquet Python 1:1).
# NB : rclone n'est PAS une dépendance pip — c'est un binaire installé dans
# l'image (voir Dockerfile), invoqué en sous-processus par l'asset de sync.
dependencies = [
  "dagster==1.13.7",
  # Le run worker (K8sRunLauncher) EST cette image : à chaque run, le launcher
  # crée un pod depuis DAGSTER_CURRENT_IMAGE (= cette image) qui REHYDRATE
  # l'instance Dagster du cluster (dagster.yaml). Or le socle configure
  # PostgresRunStorage/ScheduleStorage + K8sRunLauncher (contrat ADR 0043) : le
  # pod doit donc pouvoir importer dagster_postgres ET dagster_k8s, sinon il
  # échoue au démarrage (« Couldn't import module dagster_postgres.run_storage »)
  # avant même d'exécuter l'asset. Numérotation propre 0.YY.Z (comme dagster-dbt,
  # PAS celle de dagster core) : 0.29.7 ↔ dagster 1.13.7 (parité chart Helm ↔
  # paquet Python, ADR cluster 0006).
  "dagster-postgres==0.29.7",
  "dagster-k8s==0.29.7",
  "openlineage-python",
  # Pipeline de transformation (étape 3) : DuckDB lit le brut JSONL.gz et écrit
  # le Parquet sur S3 (httpfs path-style) ; dbt-duckdb porte les modèles ;
  # dagster-dbt expose les modèles comme assets. dagster-dbt suit une
  # numérotation propre 0.YY.Z (PAS celle de dagster) : 0.29.7 ↔ dagster 1.13.7.
  "duckdb",
  "dbt-duckdb",
  "dagster-dbt==0.29.7",
  # Plancher dbt-core EXPLICITE (contrat cluster ADR 0006, débloqué par
  # cluster#536) : la chaîne dagster-dbt==0.29.7 autorise dbt-core<1.12,>=1.7,
  # mais une résolution ancienne fige dbt-core 1.10.8 → dbt-common 1.27.1, qui
  # épingle deepdiff<8 (2 CVE). dbt-core>=1.10.22 tire dbt-common>=1.34.2, qui
  # accepte deepdiff<9 NATIVEMENT (donc 8.x corrigé) — compatible python 3.10
  # (dbt-core 1.11/dbt-common 1.37.2+ exigent >=3.10) et parité 0.29.7 ↔ dagster
  # 1.13.7 INCHANGÉE (l'image cluster n'installe aucun dbt). Aligne citation sur
  # mediawatch (déjà en dbt-core 1.11.x). dbt-common 2.0.0 INTERDIT (ré-épingle
  # deepdiff<8 : régression) — borné par l'override défensif ci-dessous.
  "dbt-core>=1.10.22",
  # Qualité des données (étape 3.5a) : suites Great Expectations exécutées en
  # asset checks Dagster BLOQUANTS (en complément des tests dbt). Validation
  # in-process sur DataFrame pandas (contexte éphémère, hermétique). GE 1.18 tire
  # numpy/scipy/pandas/cryptography (image plus lourde, ~200 Mo) — toutes licences
  # permissives ; épinglé (la résolution multi-arch vérifiée en dépend).
  "great-expectations==1.19.0",
  # Embedding sémantique par publication (étape 4, lot 3) : le vecteur(384) est
  # calculé en Python natif sur le MÊME model_quantized.onnx (all-MiniLM-L6-v2,
  # vendoré sous src/.../models/) que le code TS — sans torch, modèle cuit
  # hors-ligne (ADR 0055/0059). onnxruntime (MIT) exécute l'inférence,
  # tokenizers (Apache-2.0) reproduit le tokenizer WordPiece ; déterminisme à
  # 1 thread. numpy (déjà tiré par GE) est explicité car importé directement.
  "onnxruntime==1.23.2",
  "tokenizers==0.23.1",
  "numpy",
  # Détection de DÉRIVE (drift) des embeddings (étape MLOps, maturité 1→2) : asset
  # check Dagster NON bloquant à côté des suites Great Expectations. Evidently
  # (Apache-2.0) compare la distribution des vecteurs(384) du run courant à celle du
  # run précédent (N vs N-1) et calcule un score de drift par colonne. Tire
  # pandas/numpy/scipy (déjà présents via GE). Épinglé (résolution multi-arch).
  "evidently==0.4.40",
  # Suivi de modèles : logge params/métriques (dont le drift) et enregistre les
  # vecteurs comme artefacts dans le serveur MLflow du socle (MLFLOW_TRACKING_URI,
  # contrat cluster ADR 0043). mlflow (Apache-2.0) ; client seul, pas de serveur ici.
  "mlflow-skinny==2.22.5",
  # Modèle d'UPLIFT FWCI (ADR 0067, lot 4) : gradient boosting non linéaire (le R²=0,50
  # du spike vient de la non-linéarité, vs 0,12 en linéaire). scikit-learn (BSD-3) tire
  # numpy/scipy (déjà présents via GE) — surcoût d'image limité. Déterminisme par graine
  # figée (ADR 0057). Épinglé en 1.6.x : dernière série compatible Python 3.10 (1.7+
  # exige 3.11 ; le code-location est figé en 3.10, parité Dagster cluster ADR 0006).
  "scikit-learn==1.7.2",
]
# NB : dagster-postgres tire psycopg2-binary (LGPL) en transitive. Cette image
# l'embarque NÉCESSAIREMENT pour rehydrater l'instance dans le run worker (voir
# plus haut) ; on l'assume dans dataops/ (Python, hors gate licences Node — ADR
# 0055). Le code applicatif, lui, n'utilise jamais psycopg2 directement : l'index
# (index_load) passe par DuckDB `ATTACH ... TYPE postgres`, pas par psycopg2.

[tool.uv]
# Override sécurité DÉFENSIF (homologue uv des overrides pnpm) — désormais
# SYMÉTRIQUE de mediawatch-dagster. Depuis le plancher dbt-core>=1.10.22
# ci-dessus (contrat cluster ADR 0006, cluster#536), la résolution tire
# dbt-common>=1.34.2 (deepdiff<9), donc deepdiff 8.x corrigé NATIVEMENT :
# l'override est aujourd'hui un NO-OP. Il VERROUILLE la protection contre une
# régression amont — dbt-common 2.0.0 RÉ-épingle `deepdiff<8` : sans cette
# borne, un futur bump réintroduirait silencieusement GHSA-mw26-5g2v-hqw3
# (critical, Class Pollution dans Delta) / GHSA-54jj-px8x-5w5q (high, DoS mémoire
# SAFE_TO_IMPORT). Les deux CVE n'exploitent QUE la désérialisation d'un `Delta`
# non fiable, jamais atteinte (dbt n'utilise que `DeepDiff` sur des manifests
# LOCAUX fiables, dbt_common/record.py). API DeepDiff stable 7→8. N'impacte ni la
# chaîne dagster/dbt ni la parité Dagster 1.13.7 du cluster (ADR 0006/0033).
override-dependencies = ["deepdiff>=8,<9"]

[dependency-groups]
# hypothesis : tests basés sur les propriétés (PBT, ADR 0072) — homologue Python de
# fast-check, branché DANS pytest via @given (pas un framework concurrent). Ciblé sur
# les dérivations bornées pures (uplift_model.py : symétrie, bornes, déterminisme).
# Dev-dépendance de test uniquement (zéro empreinte runtime) ; épinglée et verrouillée
# par uv.lock.
dev = ["ruff==0.15.22", "pytest", "pytest-cov", "hypothesis==6.157.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/citation_dagster"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=citation_dagster --cov-report=term-missing --cov-fail-under=90"
